docs: align README, CHANGELOG, VALIDATION and scope with the verified state
- README: new "Telemetry Collection Layers" section. Kernel-level telemetry
  (eBPF on Linux, ETW Kernel-Process/Network on Windows) was not mentioned in
  the README anywhere, so anyone evaluating from the first screen concluded it
  did not exist - the most technical asset of the project was invisible. Added
  also the two details that make Guard fail to start in a barely readable way
  (JVM 21+ and the mandatory AEGIS_ENROLL_KEY), the corrected Guard command
  (it was `java -jar jre-new/bin/java.exe -jar ...`, malformed) and the role
  bootstrap.
- CHANGELOG: entries for the SIEM fixes, the roles CLI, the three collector
  defects and the two test guards.
- VALIDATION: updated numbers (537 passed) and the three end-to-end checks
  run today - API smoke on the live stack, Guard on Windows 11, collector on
  real logs (previously NOT-RUN). Also fixed the collector command, which
  listed non-existent options (-BrainUrl/-Token).
- V4_SCOPE: criterion 7 "real data from the lab" marked as DONE.